[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/MapCalendarImage.jpg" type="Texture" id=1]
[ext_resource path="res://core/MainScene.gd" type="Script" id=2]
[ext_resource path="res://gameobjects/Admin-SideBar/Admin-SideBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/buttons/ToggleAdminPanel-Orange.png" type="Texture" id=4]
[ext_resource path="res://Assets/buttons/ToggleAdminPanel-Black.png" type="Texture" id=5]
[ext_resource path="res://gameobjects/Hero-SideBar/Hero-SideBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://gameobjects/SideBar-Client/SideBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/AddPointPlaceHolder.png" type="Texture" id=10]
[ext_resource path="res://gameobjects/InputSideBar/InputSideBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://gameobjects/InputSideBar/CreateHeroSideBar.tscn" type="PackedScene" id=12]

[node name="MainScene" type="Control"]
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
margin_left = 2.0
margin_right = 1202.0
margin_bottom = 495.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="TextureRect" parent="UI"]
margin_right = 1196.0
margin_bottom = 505.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnedPoints" type="Node2D" parent="UI"]

[node name="ToggleAdminPanel" type="TextureButton" parent="UI"]
visible = false
anchor_left = 0.519
anchor_top = 1.0
anchor_right = 0.519
anchor_bottom = 1.0
margin_left = -69.0091
margin_top = -42.9072
margin_right = 67.991
margin_bottom = -10.9072
mouse_filter = 1
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPinPlaceHolder" type="TextureRect" parent="UI"]
visible = false
anchor_left = 0.519
anchor_top = 1.0
anchor_right = 0.519
anchor_bottom = 1.0
margin_left = -192.8
margin_top = -65.0
margin_right = 190.2
margin_bottom = -28.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 1.002
anchor_right = 1.002
margin_left = 0.369995
margin_right = 315.37
margin_bottom = 502.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventSideBar" parent="CanvasLayer/Control" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 310.0
margin_bottom = 498.0

[node name="HeroSideBar" parent="CanvasLayer/Control" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 310.0
margin_bottom = 498.0

[node name="AdminSideBar" parent="CanvasLayer/Control" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 310.0
margin_bottom = 498.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CreateEventSideBar" parent="CanvasLayer/Control" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 310.0
margin_bottom = 498.0

[node name="CreateHeroSideBar" parent="CanvasLayer/Control" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 310.0
margin_bottom = 498.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="UI/ToggleAdminPanel" to="." method="_on_ToggleAdminPanel_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
